--- a/owncloudApp/src/main/res/values-pt-rBR/strings.xml
+++ b/owncloudApp/src/main/res/values-pt-rBR/strings.xml
@@ -355,6 +355,9 @@
   <string name="preview_image_error_unknown_format">Esta imagem não pode ser mostrada</string>
   <string name="error__upload__local_file_not_copied">%1$s não pôde ser copiado para pasta local %2$s</string>
   <string name="prefs_camera_picture_upload_path_title">Caminho para fotos enviadas</string>
+  <string name="get_shares_error">Ocorreu um erro enquanto tentava recuperar compartilhamentos</string>
+  <string name="get_sharees_error">Ocorreu um erro enquanto tentava recuperar usuários e grupos</string>
+  <string name="get_capabilities_error">Ocorreu um erro enquanto tentava recuperar potencialidades</string>
   <string name="share_link_no_support_share_api">Desculpe, o compartilhamento não está habilitado em seu servidor. Entre em contato com seu 
 ⇥⇥ administrador.</string>
   <string name="share_link_file_no_exist">Não é possível compartilhar. Por favor verifique se o arquivo existe</string>
@@ -511,6 +514,7 @@
   <string name="share_via_link_expiration_date_enforced_label">Expiração *</string>
   <string name="share_via_link_expiration_date_explanation_label">O link público expirará até %1$d dias após sua criação</string>
   <string name="share_via_link_default_name_template">%1$s link</string>
+  <string name="share_via_link_empty_password">A senha está vazia</string>
   <string name="private_link_info">Este é um link privado, somente pessoas que tenham acesso ao arquivo/pasta podem usa-lo. Use isso como um link permanente para você mesmo ou apontar para outros arquivos contidos nesse compartilhamento.</string>
   <string name="file_private_link_error">O link privado não está disponível para este arquivo</string>
   <string name="download_notification_channel_name">Baixados</string>
