--- a/owncloudApp/src/main/res/values-sq/strings.xml
+++ b/owncloudApp/src/main/res/values-sq/strings.xml
@@ -354,6 +354,9 @@
   <string name="preview_image_error_unknown_format">Kjo figurë nuk mund të shfaqet</string>
   <string name="error__upload__local_file_not_copied">%1$s s\’u kopjua dot te dosja vendore %2$s</string>
   <string name="prefs_camera_picture_upload_path_title">Shteg ngarkimesh fotosh</string>
+  <string name="get_shares_error">Ndodhi një gabim teksa provohej të merreshin ndarje</string>
+  <string name="get_sharees_error">Ndodhi një gabim teksa provohej të merreshin përdorues dhe grupe</string>
+  <string name="get_capabilities_error">Ndodhi një gabim teksa provohej të merreshin aftësi</string>
   <string name="share_link_no_support_share_api">Na ndjeni, ndarja me të tjerët s\’është e aktivizuar te shërbyesi juaj. Ju lutemi, lidhuni me përgjegjësin tuaj.</string>
   <string name="share_link_file_no_exist">S\’arrihet të ndahet me të tjerët. Ju lutemi, kontrolloni nëse ekziston apo jo kartela</string>
   <string name="share_link_file_error">Ndodhi një gabim teksa përpiqej të ndahej me të tjerët kjo kartelë apo dosje</string>
@@ -509,6 +512,7 @@
   <string name="share_via_link_expiration_date_enforced_label">Skadim *</string>
   <string name="share_via_link_expiration_date_explanation_label">Lidhja publike do të skadojë jo më vonë se %1$d ditë pas krijimit</string>
   <string name="share_via_link_default_name_template">Lidhje %1$s</string>
+  <string name="share_via_link_empty_password">Fjalëkalimi është i zbrazët</string>
   <string name="private_link_info">Kjo është një lidhje private, mund ta përdorin vetëm personat të cilëve u është lejuar hyrja te kartela/dosja. Përdoreni si një lidhje të përhershme për veten ose për të drejtuar të tjerët drejt kartelash brenda ndarjesh.</string>
   <string name="file_private_link_error">S\’ka lidhje private për këtë kartelë</string>
   <string name="download_notification_channel_name">Shkarkime</string>
