--- a/owncloudApp/src/main/res/values-ru/strings.xml
+++ b/owncloudApp/src/main/res/values-ru/strings.xml
@@ -356,6 +356,9 @@
   <string name="preview_image_error_unknown_format">Это изображение не может быть отображено</string>
   <string name="error__upload__local_file_not_copied">%1$s невозможно скопировать в локальный каталог %2$s </string>
   <string name="prefs_camera_picture_upload_path_title">Путь загрузки изображений</string>
+  <string name="get_shares_error">Произошла ошибка при попытке получить записи общего доступа</string>
+  <string name="get_sharees_error">Произошла ошибка при попытке получить пользователей и группы</string>
+  <string name="get_capabilities_error">Произошла ошибка при попытке получить возможности</string>
   <string name="share_link_no_support_share_api">Механизм общего доступа не включен на данном сервере. Пожалуйста, свяжитесь с вашим
 ⇥⇥администратором.</string>
   <string name="share_link_file_no_exist">Невозможно поделиться. Убедитесь, что файл существует</string>
@@ -511,6 +514,7 @@
   <string name="share_via_link_expiration_date_enforced_label">Срок действия</string>
   <string name="share_via_link_expiration_date_explanation_label">Общедоступная ссылка устареет не позднее, чем через %1$d дней после создания</string>
   <string name="share_via_link_default_name_template">Ссылка %1$s</string>
+  <string name="share_via_link_empty_password">Пароль пуст</string>
   <string name="private_link_info">Это частная ссылка, её могут использовать только люди, у которых есть доступ к файлу или каталогу. Используйте её в качестве постоянной ссылки для себя или чтобы указать другим на файлы в совместном доступе.</string>
   <string name="file_private_link_error">Личная ссылка для этого файла недоступна</string>
   <string name="download_notification_channel_name">Скачивания</string>
