--- a/owncloudApp/src/main/res/values-el/strings.xml
+++ b/owncloudApp/src/main/res/values-el/strings.xml
@@ -355,6 +355,9 @@
   <string name="preview_image_error_unknown_format">Αυτή η εικόνα δεν μπορεί να προβληθεί</string>
   <string name="error__upload__local_file_not_copied">Το %1$s δεν μπόρεσε να αντιγραφεί στον τοπικό φάκελο %2$s</string>
   <string name="prefs_camera_picture_upload_path_title">Διαδρομή μεταφόρτωσης εικόνων</string>
+  <string name="get_shares_error">Παρουσιάστηκε σφάλμα κατά την προσπάθεια ανάκτησης κοινόχρηστων</string>
+  <string name="get_sharees_error">Παρουσιάστηκε σφάλμα κατά την προσπάθεια ανάκτησης χρηστών και ομάδων</string>
+  <string name="get_capabilities_error">Παρουσιάστηκε σφάλμα κατά την προσπάθεια ανάκτησης δυνατοτήτων</string>
   <string name="share_link_no_support_share_api">Λυπούμαστε, ο διαμοιρασμός δεν επιτρέπεται στο διακομιστή σας. Παρακαλούμε επικοινωνήστε με το
 		διαχειριστή σας.</string>
   <string name="share_link_file_no_exist">Αδύνατη η κοινή χρήση. Παρακαλούμε ελέγξτε αν ο φάκελος υπάρχει</string>
@@ -511,6 +514,7 @@
   <string name="share_via_link_expiration_date_enforced_label">Λήξη *</string>
   <string name="share_via_link_expiration_date_explanation_label">Ο δημόσιος σύνδεσμος λήγει το αργότερο %1$d ημέρες μετά την δημιουργία του</string>
   <string name="share_via_link_default_name_template">%1$s σύνδεσμος</string>
+  <string name="share_via_link_empty_password">Το συνθηματικό είναι κενό</string>
   <string name="private_link_info">Αυτός είναι ένας ιδιωτικός σύνδεσμος, μόνο τα άτομα που έχουν πρόσβαση στο αρχείο / φάκελο μπορούν να το χρησιμοποιήσουν. Χρησιμοποιήστε το ως μόνιμο σύνδεσμο για τον εαυτό σας ή να προβάλλετε στους άλλους τα αρχεία μέσα σε κοινόχρηστα.</string>
   <string name="file_private_link_error">Ο ιδιωτικός σύνδεσμος δεν είναι διαθέσιμος γι\' αυτό το αρχείο</string>
   <string name="download_notification_channel_name">Λήψεις</string>
