--- a/owncloudApp/src/main/res/values-es/strings.xml
+++ b/owncloudApp/src/main/res/values-es/strings.xml
@@ -355,6 +355,9 @@
   <string name="preview_image_error_unknown_format">No se puede mostrar la imagen</string>
   <string name="error__upload__local_file_not_copied">%1$s se pudo copiar a la carpeta local %2$s</string>
   <string name="prefs_camera_picture_upload_path_title">Ruta de subida de imagenes</string>
+  <string name="get_shares_error">Ha ocurrido un error al intentar recuperar los compartidos</string>
+  <string name="get_sharees_error">Ha ocurrido un error al intentar recuperar los usuarios y grupos</string>
+  <string name="get_capabilities_error">Ha ocurrido un error al tratar de recuperar las capacidades</string>
   <string name="share_link_no_support_share_api">La función Compartir no está activada en su servidor. Contacte a su
 		administrador.</string>
   <string name="share_link_file_no_exist">No se puede compartir. Revise si el archivo existe</string>
@@ -510,6 +513,7 @@
   <string name="share_via_link_expiration_date_enforced_label">Caducidad *</string>
   <string name="share_via_link_expiration_date_explanation_label">El enlace público no expirará antes de %1$d dias despues de ser creado</string>
   <string name="share_via_link_default_name_template">%1$s enlace</string>
+  <string name="share_via_link_empty_password">La contraseña está vacía</string>
   <string name="private_link_info">Esto es un enlace privado, sólo las personas que tienen acceso al archivo/carpeta pueden usarlo. Úsalo como enlace permanente o dirigir a otros hacia archivos dentro de compartidos.</string>
   <string name="file_private_link_error">El enlace privado no está disponible para este archivo</string>
   <string name="download_notification_channel_name">Descargas</string>
