--- a/owncloudApp/src/main/res/values/strings.xml
+++ b/owncloudApp/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
     <string name="passcode_already_set">Pattern and passcode locks cannot be enabled at the same time, please disable passcode first</string>
     <string name="pattern_no_longer_required">The pattern will not be asked anymore</string>
     <string name="pattern_configure_your_pattern_explanation">The pattern will be requested every time the app is started</string>
+    <string name="pattern_locked">Locked with pattern</string>
     <string name="illegal_argument_exception_message">A valid ACTION is needed in the Intent passed to</string>
 
     <string name="recommend_subject">Try %1$s on your smartphone!</string>
@@ -220,6 +221,7 @@
     <string name="pass_code_wrong">Incorrect passcode</string>
     <string name="pass_code_removed">Passcode removed</string>
     <string name="pass_code_stored">Passcode stored</string>
+    <string name="pass_code_locked">Locked with passcode</string>
 
     <string name="fingerprint_confirm">Confirm your fingerprint to continue</string>
     <string name="fingerprint_hint">Touch sensor</string>
