Keep removing SAML stuff

--- a/owncloudApp/src/main/res/values/strings.xml
+++ b/owncloudApp/src/main/res/values/strings.xml
@@ -431,6 +431,7 @@
     <string name="file_list_empty_moving">Nothing in here. You can add a folder!</string>
     <string name="folder_picker_choose_button_text">Choose</string>
 
+    <string name="move_file_not_found">Unable to move. Please check whether the file exists</string>
     <string name="move_file_invalid_into_descendent">It is not possible to move a folder into a descendant</string>
     <string name="move_file_invalid_overwrite">The file exists already in the destination folder</string>
     <string name="move_file_error">An error occurred while trying to move this file or folder</string>
