--- a/owncloudApp/src/main/res/values-gl/strings.xml
+++ b/owncloudApp/src/main/res/values-gl/strings.xml
@@ -333,7 +333,7 @@ Descárgueo de aquí: %2$s</string>
   <string name="ssl_validator_null_cert">Non é posíbel amosar o certificado.</string>
   <string name="ssl_validator_no_info_about_error">- Non hai información sobre este erro</string>
   <string name="placeholder_sentence">Isto é un marcador de posición</string>
-  <string name="placeholder_filename">placeholder.txt</string>
+  <string name="placeholder_filename">marcador_de-posición.txt</string>
   <string name="placeholder_filetype">Imaxe PNG</string>
   <string name="placeholder_filesize">389 KB</string>
   <string name="placeholder_timestamp">2012/05/18 12:23 PM</string>
