--- a/owncloudApp/src/main/res/values/strings.xml
+++ b/owncloudApp/src/main/res/values/strings.xml
@@ -79,6 +79,7 @@
     <string name="recommend_subject">Try %1$s on your smartphone!</string>
     <string name="recommend_text">"I want to invite you to use %1$s on your smartphone!\nDownload here: %2$s"</string>
 
+    <string name="error_reason">due to</string>
     <string name="auth_failure_snackbar">Authentication failed</string>
     <string name="auth_failure_snackbar_action">Change account</string>
     <string name="auth_oauth_failure">The access token has expired or become invalid. Sign in again to regain access</string>
@@ -138,7 +139,7 @@
     <string name="common_error">Error</string>
     <string name="common_loading">Loading&#8230;</string>
     <string name="common_unknown">unknown</string>
-    <string name="common_error_unknown">Unknown error</string>
+    <string name="common_error_unknown">unknown error</string>
     <string name="common_pending">Pending</string>
     <string name="common_important">Important</string>
     <string name="about_title">About</string>
@@ -373,9 +374,9 @@
     <string name="error__upload__local_file_not_copied">%1$s could not be copied to %2$s local folder</string>
     <string name="prefs_camera_picture_upload_path_title">Picture upload path</string>
 
-    <string name="get_shares_error">An error occurred while trying to retrieve shares</string>
+    <string name="get_shares_error">It was not possible to retrieve the shares</string>
     <string name="get_sharees_error">An error occurred while trying to retrieve users and groups</string>
-    <string name="get_capabilities_error">An error occurred while trying to retrieve capabilities</string>
+    <string name="get_capabilities_error">It was not possible to retrieve the capabilities</string>
     <string name="share_link_no_support_share_api">Sorry, sharing is not enabled on your server. Please contact your
 		administrator.</string>
     <string name="share_link_file_no_exist">Unable to share. Please check whether the file exists</string>
@@ -397,7 +398,7 @@
 
     <string name="error_cant_bind_to_operations_service">Critical error: cannot perform operations</string>
 
-    <string name="network_error_socket_exception">An error occurred while connecting with the server.</string>
+    <string name="network_error_socket_exception">an error while connecting with the server</string>
     <string name="network_error_socket_timeout_exception">The server took too long to respond</string>
     <string name="network_error_connect_timeout_exception">The server took too long to connect</string>
     <string name="network_host_not_available">Server could not be reached</string>
