--- a/owncloudApp/src/main/res/values-he/strings.xml
+++ b/owncloudApp/src/main/res/values-he/strings.xml
@@ -77,6 +77,7 @@
   <string name="recommend_text">הנך מוזמן להשתמש ב- %1$s בטלפון החכם שלך!\nניתן להוריד מכאן: %2$s</string>
   <string name="auth_failure_snackbar">האימות נכשל</string>
   <string name="auth_failure_snackbar_action">החלף חשבון</string>
+  <string name="auth_oauth_failure_snackbar_action">התחברות</string>
   <string name="auth_check_server">בדיקת שרת</string>
   <string name="auth_host_url">כתובת שרת https://…</string>
   <string name="auth_username">שם משתמש</string>
