--- a/owncloudApp/src/main/res/values-sq/strings.xml
+++ b/owncloudApp/src/main/res/values-sq/strings.xml
@@ -77,6 +77,7 @@
   <string name="recommend_text">Dua t\’ju ftoj të përdorni %1$s në telefonin tuaj!\nShkarkojeni prej këtu: %2$s</string>
   <string name="auth_failure_snackbar">Mirëfilltësimi dështoi</string>
   <string name="auth_failure_snackbar_action">Ndryshoni llogari</string>
+  <string name="auth_oauth_failure_snackbar_action">Hyni</string>
   <string name="auth_check_server">Kontrollo shërbyesin</string>
   <string name="auth_host_url">Adresë https://… e shërbyesit</string>
   <string name="auth_username">Emër përdoruesi</string>
