--- a/owncloudApp/src/main/res/values-fi-rFI/strings.xml
+++ b/owncloudApp/src/main/res/values-fi-rFI/strings.xml
@@ -214,6 +214,7 @@
   <string name="media_play_pause_description">Toisto tai keskeytys -painike</string>
   <string name="media_forward_description">Eteenpäin kelaus -painike</string>
   <string name="auth_getting_authorization">Noudetaan valtuutusta…</string>
+  <string name="auth_trying_to_login">Yritetään kirjautua sisään…</string>
   <string name="auth_no_net_conn_title">Ei verkkoyhteyttä</string>
   <string name="auth_nossl_plain_ok_title">Salattu yhteys ei ole käytettävissä.</string>
   <string name="auth_connection_established">Yhteys muodostettu</string>
@@ -480,7 +481,7 @@
   <!--Welcome to oC intro features-->
   <string name="welcome_feature_skip_button">Ohita</string>
   <string name="welcome_feature_1_title">Hallitse kaikkia synkronoituja tiedostojasi</string>
-  <string name="welcome_feature_1_text">Voit kopioida siirtää ja poistaa</string>
+  <string name="welcome_feature_1_text">Voit kopioida, siirtää ja poistaa</string>
   <string name="welcome_feature_2_title">Jaa tiedostoja ja kansioita</string>
   <string name="welcome_feature_2_text">Voit jakaa yksityisesti tai julkisesti</string>
   <string name="welcome_feature_3_title">Monta käyttäjää</string>
