--- a/owncloudApp/src/main/res/values-sq/strings.xml
+++ b/owncloudApp/src/main/res/values-sq/strings.xml
@@ -3,7 +3,7 @@
   <string name="about_android">%1$s për Android</string>
   <string name="about_version">Version %1$s</string>
   <string name="actionbar_search">Kërko në këtë dosje</string>
-  <string name="actionbar_sync">Freskoni llogarinë</string>
+  <string name="actionbar_sync">Fresko llogarinë</string>
   <string name="actionbar_upload">Ngarkoni</string>
   <string name="actionbar_upload_from_apps">Lëndë nga aplikacione të tjera</string>
   <string name="actionbar_upload_files">Kartela</string>
