--- a/owncloudApp/src/main/res/values-es-rAR/strings.xml
+++ b/owncloudApp/src/main/res/values-es-rAR/strings.xml
@@ -39,7 +39,9 @@
   <string name="prefs_fingerprint">Bloqueo de huella dactilar</string>
   <string name="prefs_fingerprint_summary">Habilitar la contraseña o patrón de bloqueo para utilizar esta opción</string>
   <string name="prefs_touches_with_other_visible_windows">En contacto con otras ventanas visibles</string>
+  <string name="prefs_touches_with_other_visible_windows_summary">Permitir clicks mientras que la vista está oscurecida por otra ventana visible. Habilítalo para utilizar aplicaciones de filtro de luz.</string>
   <string name="confirmation_touches_with_other_windows_title">¿Estás seguro que quieres habilitar esta funcionalidad?</string>
+  <string name="confirmation_touches_with_other_windows_message">Utiliza esta funcionalidad bajo tu propia responsabilidad, una aplicación maliciosa podría tratar de engañarte a realizar algunas acciones, sin que te des cuenta, utilizando otras vistas.</string>
   <string name="prefs_camera_picture_upload">Carga de imágenes</string>
   <string name="prefs_camera_picture_upload_summary">Cargar imágenes automáticamente tomadas desde la cámara</string>
   <string name="prefs_camera_video_upload">Carga de videos</string>
@@ -70,11 +72,13 @@
   <string name="passcode_already_set">El patrón y la clave de desbloqueo no pueden estar activos al mismo tiempo, por favor desactiva primero la clave</string>
   <string name="pattern_no_longer_required">El patrón no se volverá a solicitar</string>
   <string name="pattern_configure_your_pattern_explanation">Se solicitará el patrón cada vez que se inicie una aplicación</string>
+  <string name="pattern_locked">Bloqueado con patrón</string>
   <string name="illegal_argument_exception_message">Se necesita una ACCION válida para poder pasar a</string>
   <string name="recommend_subject">¡Intento %1$s en tu teléfono inteligente!</string>
   <string name="recommend_text">Quiero invitarte a usar %1$s en tu teléfono inteligente!\nDescárgalo aquí: %2$s</string>
   <string name="auth_failure_snackbar">Fallo al identificar</string>
   <string name="auth_failure_snackbar_action">Cambiar cuenta</string>
+  <string name="auth_oauth_failure">El tóken de acceso ha expirado o se ha vuelto inválido. Ingresa nuevamente para conseguir el acceso</string>
   <string name="auth_oauth_failure_snackbar_action">Entrar</string>
   <string name="auth_check_server">Verificar servidor</string>
   <string name="auth_host_url">Dirección del servidor https://...</string>
@@ -215,6 +219,7 @@
   <string name="pass_code_wrong">Contraseña incorrecta</string>
   <string name="pass_code_removed">Contraseña eliminada</string>
   <string name="pass_code_stored">Contraseña almacenada</string>
+  <string name="pass_code_locked">Bloqueado con código de acceso</string>
   <string name="fingerprint_confirm">Confirma tu huella dactilar para continuar</string>
   <string name="fingerprint_hint">Toca el sensor</string>
   <string name="fingerprint_not_recognized">Huella dactilar no reconocida, intente nuevamente</string>
@@ -349,6 +354,9 @@
   <string name="preview_image_error_unknown_format">Esta imagen no puede ser mostrada</string>
   <string name="error__upload__local_file_not_copied">%1$s no pudo ser copiado a la carpeta local %2$s </string>
   <string name="prefs_camera_picture_upload_path_title">Ruta de carga de la imagen</string>
+  <string name="get_shares_error">Ha ocurrido un error al intentar obtener los recursos compartidos</string>
+  <string name="get_sharees_error">Ha ocurrido un error al intentar obtener los usuarios y grupos</string>
+  <string name="get_capabilities_error">Ha ocurrido un error al intentar obtener las capacidades</string>
   <string name="share_link_no_support_share_api">Lo sentimos, compartir no esta activado en su servidor. Por favor contacte a su
 ⇥⇥administrator.</string>
   <string name="share_link_file_no_exist">Imposible compartir. Por favor revise si el archivo existe</string>
@@ -499,6 +507,7 @@
   <string name="share_via_link_password_enforced_label">Contraseña *</string>
   <string name="share_via_link_expiration_date_enforced_label">Vencimiento *</string>
   <string name="share_via_link_default_name_template">Enlace %1$s</string>
+  <string name="share_via_link_empty_password">La contraseña está en blanco</string>
   <string name="file_private_link_error">El enlace privado no está disponible para este archivo</string>
   <string name="download_notification_channel_name">Descargas</string>
   <string name="download_notification_channel_description">Ver el nombre del archivo descargado y su progreso</string>
