--- a/owncloudApp/src/main/res/values-ca/strings.xml
+++ b/owncloudApp/src/main/res/values-ca/strings.xml
@@ -17,6 +17,7 @@
   <string name="actionbar_sort_by_size">Petit - Gran</string>
   <string name="drawer_item_all_files">Tots els fitxers</string>
   <string name="drawer_item_only_available_offline">Disponible fora de línia</string>
+  <string name="drawer_item_shared_by_link_files">Compartit amb enllaç</string>
   <string name="drawer_item_settings">Configuració</string>
   <string name="drawer_item_uploads_list">Fitxers carregats</string>
   <string name="drawer_close">Tanca</string>
