--- a/owncloudApp/src/main/res/values-da/strings.xml
+++ b/owncloudApp/src/main/res/values-da/strings.xml
@@ -15,6 +15,7 @@
   <string name="actionbar_sort_by_name">A-Å</string>
   <string name="drawer_item_all_files">Alle filer</string>
   <string name="drawer_item_only_available_offline">Tilgængelig offline</string>
+  <string name="drawer_item_shared_by_link_files">Delt via link</string>
   <string name="drawer_item_settings">Indstillinger</string>
   <string name="drawer_item_uploads_list">Uploade filer</string>
   <string name="drawer_close">Luk</string>
