--- a/owncloudApp/src/main/res/values-en-rGB/strings.xml
+++ b/owncloudApp/src/main/res/values-en-rGB/strings.xml
@@ -20,6 +20,7 @@
   <string name="actionbar_sort_by_size">Smallest - Largest</string>
   <string name="drawer_item_all_files">All files</string>
   <string name="drawer_item_only_available_offline">Available offline</string>
+  <string name="drawer_item_shared_by_link_files">Shared by link</string>
   <string name="drawer_item_settings">Settings</string>
   <string name="drawer_item_uploads_list">Uploads</string>
   <string name="drawer_close">Close</string>
