--- a/owncloudApp/src/main/res/values-es-rMX/strings.xml
+++ b/owncloudApp/src/main/res/values-es-rMX/strings.xml
@@ -20,6 +20,7 @@
   <string name="actionbar_sort_by_size">Más chico - Más grande</string>
   <string name="drawer_item_all_files">Todos los archivos</string>
   <string name="drawer_item_only_available_offline">Disponible sin conexión</string>
+  <string name="drawer_item_shared_by_link_files">Compartido mediante vínculo</string>
   <string name="drawer_item_settings">Ajustes</string>
   <string name="drawer_item_uploads_list">Subidas</string>
   <string name="drawer_close">Cerrar</string>
