--- a/owncloudApp/src/main/res/values-fi-rFI/strings.xml
+++ b/owncloudApp/src/main/res/values-fi-rFI/strings.xml
@@ -16,6 +16,7 @@
   <string name="actionbar_sort_by_date">Vanhin - Uusin</string>
   <string name="actionbar_sort_by_size">Pienin - Suurin</string>
   <string name="drawer_item_all_files">Kaikki tiedostot</string>
+  <string name="drawer_item_shared_by_link_files">Jaettu linkin kautta</string>
   <string name="drawer_item_settings">Asetukset</string>
   <string name="drawer_item_uploads_list">Lataukset</string>
   <string name="drawer_close">Sulje</string>
