--- a/owncloudApp/src/main/res/values-fr/strings.xml
+++ b/owncloudApp/src/main/res/values-fr/strings.xml
@@ -20,6 +20,7 @@
   <string name="actionbar_sort_by_size">Du plus petit au plus grand</string>
   <string name="drawer_item_all_files">Tous les fichiers</string>
   <string name="drawer_item_only_available_offline">Disponible hors-ligne</string>
+  <string name="drawer_item_shared_by_link_files">Partagés par lien</string>
   <string name="drawer_item_settings">Paramètres</string>
   <string name="drawer_item_uploads_list">Téléversements</string>
   <string name="drawer_close">Fermer</string>
