--- a/owncloudApp/src/main/res/values-gl/strings.xml
+++ b/owncloudApp/src/main/res/values-gl/strings.xml
@@ -20,6 +20,7 @@
   <string name="actionbar_sort_by_size">Os máis pequenos primeiro</string>
   <string name="drawer_item_all_files">Todos os ficheiros</string>
   <string name="drawer_item_only_available_offline">Dispoñíbel sen conexión</string>
+  <string name="drawer_item_shared_by_link_files">Compartido por ligazón</string>
   <string name="drawer_item_settings">Axustes</string>
   <string name="drawer_item_uploads_list">Envíos</string>
   <string name="drawer_close">Pechar</string>
