--- a/owncloudApp/src/main/res/values-hu-rHU/strings.xml
+++ b/owncloudApp/src/main/res/values-hu-rHU/strings.xml
@@ -20,6 +20,7 @@
   <string name="actionbar_sort_by_size">Legkisebb - Legnagyobb</string>
   <string name="drawer_item_all_files">Összes fájl</string>
   <string name="drawer_item_only_available_offline">Offline elérhető</string>
+  <string name="drawer_item_shared_by_link_files">Linkkel osztottam meg</string>
   <string name="drawer_item_settings">Beállítások</string>
   <string name="drawer_item_uploads_list">Feltöltések</string>
   <string name="drawer_close">Bezárás</string>
