--- a/owncloudApp/src/main/res/values-is/strings.xml
+++ b/owncloudApp/src/main/res/values-is/strings.xml
@@ -20,6 +20,7 @@
   <string name="actionbar_sort_by_size">Minnst - Stærst</string>
   <string name="drawer_item_all_files">Allar skrár</string>
   <string name="drawer_item_only_available_offline">Tiltækt án nettengingar</string>
+  <string name="drawer_item_shared_by_link_files">Deilt með tengli</string>
   <string name="drawer_item_settings">Stillingar</string>
   <string name="drawer_item_uploads_list">Uploads</string>
   <string name="drawer_close">Loka</string>
