--- a/owncloudApp/src/main/res/values-it/strings.xml
+++ b/owncloudApp/src/main/res/values-it/strings.xml
@@ -20,6 +20,7 @@
   <string name="actionbar_sort_by_size">Più piccolo - Più grande</string>
   <string name="drawer_item_all_files">Tutti i file</string>
   <string name="drawer_item_only_available_offline">Disponibile non in linea</string>
+  <string name="drawer_item_shared_by_link_files">Condivisi tramite collegamento</string>
   <string name="drawer_item_settings">Impostazioni</string>
   <string name="drawer_item_uploads_list">Caricamenti</string>
   <string name="drawer_close">Chiudi</string>
