--- a/owncloudApp/src/main/res/values-ko/strings.xml
+++ b/owncloudApp/src/main/res/values-ko/strings.xml
@@ -17,6 +17,7 @@
   <string name="actionbar_sort_by_date">오래된순 - 최신순</string>
   <string name="drawer_item_all_files">모든 파일</string>
   <string name="drawer_item_only_available_offline">오프라인 사용 가능</string>
+  <string name="drawer_item_shared_by_link_files">링크로 공유됨</string>
   <string name="drawer_item_settings">설정</string>
   <string name="drawer_item_uploads_list">업로드</string>
   <string name="drawer_close">닫기</string>
