--- a/owncloudApp/src/main/res/values-lt-rLT/strings.xml
+++ b/owncloudApp/src/main/res/values-lt-rLT/strings.xml
@@ -18,6 +18,7 @@
   <string name="actionbar_sort_by_size">Mažiausi - Didžiausi</string>
   <string name="drawer_item_all_files">Visi failai</string>
   <string name="drawer_item_only_available_offline">Pasiekiamas neprisijungus</string>
+  <string name="drawer_item_shared_by_link_files">Pasidalinta su nuoroda</string>
   <string name="drawer_item_settings">Parinktys</string>
   <string name="drawer_item_uploads_list">Įkėlimai</string>
   <string name="drawer_close">Užverti</string>
