--- a/owncloudApp/src/main/res/values-nl/strings.xml
+++ b/owncloudApp/src/main/res/values-nl/strings.xml
@@ -20,6 +20,7 @@
   <string name="actionbar_sort_by_size">Kleinste - Grootste</string>
   <string name="drawer_item_all_files">Alle bestanden</string>
   <string name="drawer_item_only_available_offline">Beschikbaar off-line</string>
+  <string name="drawer_item_shared_by_link_files">Gedeeld via een link</string>
   <string name="drawer_item_settings">Instellingen</string>
   <string name="drawer_item_uploads_list">Uploads</string>
   <string name="drawer_close">Sluiten</string>
