--- a/owncloudApp/src/main/res/values-uk/strings.xml
+++ b/owncloudApp/src/main/res/values-uk/strings.xml
@@ -18,6 +18,7 @@
   <string name="actionbar_sort_by_date">Старіші - Новіші</string>
   <string name="actionbar_sort_by_size">Найменші - Найбільші</string>
   <string name="drawer_item_all_files">Усі файли</string>
+  <string name="drawer_item_shared_by_link_files">Доступне за посиланням</string>
   <string name="drawer_item_settings">Налаштування</string>
   <string name="drawer_item_uploads_list">Завантажень</string>
   <string name="drawer_close">Закрити</string>
