--- a/owncloudApp/src/main/res/values-zh-rCN/strings.xml
+++ b/owncloudApp/src/main/res/values-zh-rCN/strings.xml
@@ -20,6 +20,7 @@
   <string name="actionbar_sort_by_size">最小 - 最大</string>
   <string name="drawer_item_all_files">全部文件</string>
   <string name="drawer_item_only_available_offline">离线可用</string>
+  <string name="drawer_item_shared_by_link_files">分享链接的文件</string>
   <string name="drawer_item_settings">设置</string>
   <string name="drawer_item_uploads_list">上传</string>
   <string name="drawer_close">关闭</string>
